--- a/Nexxy-Frontend/src/app/pages/login/login.component.html
+++ b/Nexxy-Frontend/src/app/pages/login/login.component.html
@@ -3,16 +3,19 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-3 form-group">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="text" class="form-control" id="username" formControlName="username" required>
+        <input type="text" class="form-control" id="email" formControlName="email" required>
 
         <div id="emailHelp" class="form-text">
           We'll never share your email with anyone else.
         </div>
       </div>
       <div class="mb-3 form-group">
+        <label for="exampleInputEmail1" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" formControlName="username" required>
+      </div>
+      <div class="mb-3 form-group" *ngIf="isRegister">
         <label for="exampleInputPassword1" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" formControlName="password" required>
-
       </div>
       <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1" />
