Fixed the registery of user
now user can register correctly

--- a/Nexxy-Frontend/src/app/pages/login/login.component.css
+++ b/Nexxy-Frontend/src/app/pages/login/login.component.css
@@ -1,4 +1,13 @@
 .form-block {
-    max-width: 500px; /* Adjust width as needed */
-  }
-  
+  max-width: 800px; /* Adjust width as needed */
+}
+
+.close {
+  position: absolute;
+  top: 10px; /* Adjust for spacing */
+  right: 10px; /* Adjust for spacing */
+  background: none; /* Remove default button background */
+  border: none; /* Remove default button border */
+  font-size: 1.5rem; /* Adjust font size for "X" */
+  cursor: pointer; /* Indicate clickable element */
+}
